--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.9",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "lightningcss": "^1.30.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
