chore: build fix

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 # Ensure optional dependencies are installed (needed for native modules like lightningcss)
 # This helps ensure native bindings are properly installed on Vercel
+legacy-peer-deps=true
