--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "postinstall": "npm rebuild || true"
+    "postinstall": "npm rebuild @tailwindcss/oxide --no-save || echo 'Rebuild skipped'"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -28,6 +28,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@sendgrid/mail": "^8.1.6",
+    "@tailwindcss/postcss": "^4",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -50,19 +51,18 @@
     "resend": "^6.5.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4",
     "zod": "^4.1.9",
     "zustand": "^5.0.8",
     "lightningcss": "^1.30.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
