--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
   "buildCommand": "npm run build",
   "installCommand": "npm install && npm rebuild @tailwindcss/oxide || true",
-  "framework": "nextjs",
-  "nodeVersion": "22.x",
-  "env": {
-    "NEXT_TELEMETRY_DISABLED": "1"
-  }
+  "framework": "nextjs"
 }
 
