--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@sendgrid/mail": "^8.1.6",
     "@tailwindcss/postcss": "^4",
     "axios": "^1.12.2",
@@ -42,6 +43,7 @@
     "framer-motion": "^12.23.12",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "lightningcss": "^1.30.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.544.0",
     "next": "15.5.2",
@@ -56,8 +58,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4",
     "zod": "^4.1.9",
-    "zustand": "^5.0.8",
-    "lightningcss": "^1.30.1"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
